update profile creation

--- a/SimpleStrength/src/app/home/home.page.html
+++ b/SimpleStrength/src/app/home/home.page.html
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">{{Title}}</ion-title>
+      <h3>Simple Strength</h3>
     </ion-toolbar>
   </ion-header>
 
@@ -52,48 +52,50 @@
     
       <ion-card-content>
         <p>Before you can start tracking your workouts, you need to create a profile.</p>
-
-        <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" novalidate>
-          <!-- Sex -->
-          <ion-item>
-            <ion-label>Sex</ion-label>
-            <ion-select placeholder="Select One" formControlName="Sex" required>
-              <ion-select-option value="Female">Female</ion-select-option>
-              <ion-select-option value="Male">Male</ion-select-option>
-            </ion-select>
-          </ion-item>
-
-          <!-- Age -->
-          <ion-item lines="full">
-            <ion-label position="floating">Age</ion-label>
-            <ion-input formControlName="Age" type="number" min="14" max="89" required></ion-input>
-          </ion-item>
-
-          <!-- Bodyweight -->
-          <ion-item lines="full">
-            <ion-label position="floating">Bodyweight</ion-label>
-            <ion-input formControlName="Bodyweight" type="number" min="90" max="310" required></ion-input>
-          </ion-item>
-      
-          <!-- Fitness Level -->
-          <ion-item>
-            <ion-label>Fitness Level</ion-label>
-            <ion-select placeholder="Select One" formControlName="FitnessLevel" required>
-              <ion-select-option value="Beginner">Beginner</ion-select-option>
-              <ion-select-option value="Novice">Novice</ion-select-option>
-              <ion-select-option value="Intermediate">Intermediate</ion-select-option>
-              <ion-select-option value="Advanced">Advanced</ion-select-option>
-              <ion-select-option value="Elite">Elite</ion-select-option>
-            </ion-select>
-          </ion-item>
-      
-          <ion-row>
-            <ion-col>
-              <ion-button type="submit" color="primary" expand="block">Create Profile</ion-button>
-            </ion-col>
-          </ion-row>
-        </form>
       </ion-card-content>
     </ion-card>
+
+    <div>
+      <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" novalidate>
+        <!-- Sex -->
+        <ion-item>
+          <ion-label>Sex</ion-label>
+          <ion-select formControlName="Sex" required>
+            <ion-select-option value="Female">Female</ion-select-option>
+            <ion-select-option value="Male">Male</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+        <!-- Age -->
+        <ion-item>
+          <ion-label position="floating">Age</ion-label>
+          <ion-input formControlName="Age" type="number" min="14" max="89" required></ion-input>
+        </ion-item>
+
+        <!-- Bodyweight -->
+        <ion-item>
+          <ion-label position="floating">Bodyweight</ion-label>
+          <ion-input formControlName="Bodyweight" type="number" min="90" max="310" required></ion-input>
+        </ion-item><br>
+    
+        <!-- Fitness Level -->
+        <ion-item>
+          <ion-label>Fitness Level</ion-label>
+          <ion-select formControlName="FitnessLevel" required>
+            <ion-select-option value="Beginner">Beginner</ion-select-option>
+            <ion-select-option value="Novice">Novice</ion-select-option>
+            <ion-select-option value="Intermediate">Intermediate</ion-select-option>
+            <ion-select-option value="Advanced">Advanced</ion-select-option>
+            <ion-select-option value="Elite">Elite</ion-select-option>
+          </ion-select>
+        </ion-item>
+    
+        <ion-row>
+          <ion-col>
+            <ion-button type="submit" color="primary" expand="block">Create Profile</ion-button>
+          </ion-col>
+        </ion-row>
+      </form>
+    </div>
   </ng-template>
 </ion-content>
