import bench standards

--- a/SimpleStrength/src/app/home/home.page.html
+++ b/SimpleStrength/src/app/home/home.page.html
@@ -99,5 +99,7 @@
         </ion-row>
       </form>
     </div>
+
+    <ion-button color="danger" (click)="testFunction()">Test</ion-button>
   </ng-template>
 </ion-content>
