--- a/SimpleStrength/src/global.scss
+++ b/SimpleStrength/src/global.scss
@@ -24,3 +24,8 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.validation-errors {
+    color: red;
+    padding: 5px;
+}
